--- a/src/main/resources/com/example/flightdashboard/dashboard.fxml
+++ b/src/main/resources/com/example/flightdashboard/dashboard.fxml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox spacing="10" alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1"
-      xmlns="http://javafx.com/javafx/23.0.1"
-      fx:controller="com.example.flightdashboard.ui.DashboardView"
-      prefWidth="800" prefHeight="600">
+<VBox fx:id="mainVBox" alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.flightdashboard.ui.DashboardView">
+   <Button fx:id="startButton" mnemonicParsing="false" onAction="#onStartSimulation" text="Start Simulation" />
+   <Button fx:id="stopButton" mnemonicParsing="false" onAction="#onStopSimulation" text="Stop Simulation" />
+   <Button fx:id="emergencyButton" mnemonicParsing="false" onAction="#onEmergencyLanding" text="Emergency Landing" />
+   <Button fx:id="shutdownButton" mnemonicParsing="false" onAction="#onShutDownEngine" text="Shut Down Engine" />
    <Label text="İrtifa" />
-   <Slider fx:id="altitudeSlider" prefWidth="300"/>
+   <Slider fx:id="altitudeSlider" prefWidth="300" />
    <Label text="Hız" />
-   <Slider fx:id="speedSlider" prefWidth="300"/>
+   <Slider fx:id="speedSlider" prefWidth="300" />
    <Label text="Yakıt" />
-   <ProgressBar fx:id="fuelBar" prefWidth="300"/>
+   <ProgressBar fx:id="fuelBar" prefWidth="300" />
 </VBox>
-
